# sshdock

./: .gitignore  Cargo.toml  README.md  config.example.toml  install.sh  sshdock.service
src/: config.rs  error.rs  main.rs  power.rs  state.rs  system.rs  wifi.rs
