[package]
name = "sshdock"
version = "1.0.0"
edition = "2021"

[dependencies]
dirs = "5"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
thiserror = "1"
toml = "0.8"
zbus = { version = "4", default-features = false, features = ["blocking", "async-io"] }
